Refactor Folder structure and PATRON BUILDER